fix pagination being too wide in some mobile layouts

--- a/themes/aras/static/css/main.css
+++ b/themes/aras/static/css/main.css
@@ -207,7 +207,7 @@ a.btn-subscribe {
 
 .pagination
 {
-	width: 720px;
+	width: 99%;
 	text-align: center;
 }
 
